fix: split handler by interfaces
